Improved Windows build script